# AutoPilotMath

./: .gitignore  CMakeLists.txt  README.md  bench_test.cpp
algorithm/: .clang-format  CMakeLists.txt  README.md  format.sh
algorithm/cilqr/: CMakeLists.txt  cilqr_lon_condition.ipynb  cilqr_test.ipynb  cilqr_test_lat.ipynb  ilqr_lon_condition.cpp  ilqr_lon_condition.h  ilqr_pybind.cpp  ilqr_pybind.h  ilqr_solver.cpp  ilqr_solver.h  ilqr_tree_develop_interface.cpp  ilqr_tree_develop_interface.h  ilqr_tree_lat_test.ipynb  ilqr_tree_lon_test.ipynb  ilqr_tree_solver.cpp  ilqr_tree_solver.h  init_traj_generator.cpp  init_traj_generator.h  lateral_longitudinal_ilqr.cpp  lateral_longitudinal_ilqr.h  main.cpp  vehicle_test.ipynb
algorithm/cilqr/.ipynb_checkpoints/: cilqr_constarint_test-checkpoint.ipynb  cilqr_lon_condition-checkpoint.ipynb  cilqr_test-checkpoint.ipynb  cilqr_test_lat-checkpoint.ipynb  ilqr_test-checkpoint.ipynb  ilqr_tree_lat_test-checkpoint.ipynb  ilqr_tree_lon_test-checkpoint.ipynb  vehicle_test-checkpoint.ipynb
algorithm/cilqr/core/: common_struct.h  ilqr_lon_condition.cpp  ilqr_lon_condition.h  ilqr_tree_interface.cpp  ilqr_tree_interface.h  ilqr_tree_solver.cpp  ilqr_tree_solver.h  init_traj_generator.cpp  init_traj_generator.h
algorithm/cilqr/data/: data.json
algorithm/cilqr/notebook/: cilqr_constarint_test.ipynb  cilqr_init_traj_test.ipynb  ilqr_test.ipynb  ilqr_tree_corner_test.ipynb  ilqr_tree_cross_test.ipynb  ilqr_tree_dodge_test.ipynb  ilqr_tree_lat_test.ipynb  ilqr_tree_lon_test.ipynb  ilqr_tree_lon_test_gyh.ipynb  show_me.ipynb  vehicle_test.ipynb
algorithm/cilqr/old_version/: space_bicycle_version.cpp  space_bicycle_version.h
algorithm/cilqr/py_lib/: cilqr_debug.py  cilqr_param.py  cilqr_plot.py  cilqr_plot_xviz.py
algorithm/cilqr/ref/: CMakeLists.txt  Makefile  README.md  tgz_dependencies.txt
algorithm/dcp_tree/: CMakeLists.txt  dcp_motion_tree_dev.cpp  dcp_motion_tree_dev.h  dcp_tree.cpp  dcp_tree.h  dcp_tree_pybind.cpp  dcp_tree_pybind.h  main_test.cpp  track_simulator.h
algorithm/dcp_tree/core/: dcp_motion_tree.cpp  dcp_motion_tree.h  dcp_tree.cpp  dcp_tree.h  dcp_tree_interface.h  track_simulator.cpp  track_simulator.h
algorithm/dcp_tree/data/: 2024-6-6_low_speed_gyh.json  3.json  case1_empty_3_lanes.json  case2_crowded_3_lanes.json  case3_one_lane_slow_car.json  case4_two_lane_cars_too_close.json  case5_only_have_behind_ego_cars.json  case6_cur_left_lane_2_cars.json  case7_cur_right_lane_2_cars.json  case8_cur_left_right_3_cars.json  case9_bad_case_slow_car.json  f_11.json  f_18.json  f_19.json  f_25.json  test.ipynb
algorithm/dcp_tree/notebook/: dcp_motion_dev.ipynb  dcp_tree_cost.ipynb  dcp_tree_low_speed_gyh.ipynb  dcp_tree_test_plot.ipynb
algorithm/dcp_tree/python_plot/: dcp_tree_plot.py
algorithm/env_simulator/: CMakeLists.txt  env_sim_test.ipynb  env_simulator.cpp  env_simulator.h  free_space.cpp  free_space.h  lane.cpp  lane.h  main.cpp  obstacle.cpp  obstacle.h  pybind_env_simulator.cpp  pybind_env_simulator.h  spline.cpp  spline.h
algorithm/env_simulator/.ipynb_checkpoints/: env_sim_test-checkpoint.ipynb
algorithm/env_simulator/data/: curva_lanes_case_1.json  curva_lanes_case_2.json  curva_lanes_case_3.json  freespace_case_1.json  freespace_case_2.json  init_traj_case_1.json  init_traj_case_10.json  init_traj_case_11.json  init_traj_case_12.json  init_traj_case_2.json  init_traj_case_3.json  init_traj_case_4.json  init_traj_case_5.json  init_traj_case_6.json  init_traj_case_7.json  init_traj_case_8.json  init_traj_case_9.json  straight_lanes_case_1.json  straight_lanes_case_2.json  straight_lanes_case_3.json  straight_lanes_case_4.json  test_case_1_corner_case.json  test_case_1_straight_lanes_cruise.json  test_case_2_straight_lanes_cruise.json  test_case_3_straight_lanes_cruise.json  test_case_5_straight_lanes_cruise.json  test_case_6_straight_lanes_cruise.json  test_case_8_straight_lanes_cruise.json  test_case_9_straight_lanes_cruise.json  test_case_dodge_1.json  test_case_dodge_2.json  test_case_dodge_cross_1.json  test_case_multi_traj_1.json
algorithm/env_simulator/py_lib/: py_env_sim.py
algorithm/idm/: CMakeLists.txt  README.md  idm.cpp  idm.h  idm.html  idm_case_manager.py  idm_case_ploter.py  idm_debug.py  idm_debugger.ipynb  main.cpp  pybind_idm.cpp  pybind_idm.h
algorithm/idm/idm_case_file/: case_1.json
algorithm/interaction_search/: CMakeLists.txt
algorithm/interaction_search/core/: ilqr_caller.cpp  ilqr_caller.h  interaction_search.cpp  interaction_search.h  interaction_search_common.h  interaction_search_traj.cpp  interaction_search_traj.h  osp_env.h
algorithm/math_common/: CMakeLists.txt  interval.h  nn_tool.cpp  nn_tool.h  utils.cpp  utils.h
athena/: CMakeLists.txt
athena/data_demo/processed_raw/: 000a07a3-fec1-47d5-8ba7-e8610409efb3.pkl
athena/data_preprocess/: agent_data_preprocess.cpp  agent_data_preprocess.h  data_preprocess.cpp  data_preprocess.h  main_test.cpp  map_data_preprocess.cpp  map_data_preprocess.h  occ_vector_generator.cpp  occ_vector_generator.h  train_data_type.h
athena/data_process_pybind/: dlp_data_preprocess.ipynb  dlp_data_preprocess_gyh.ipynb  dlp_pybind.cpp  dlp_pybind.h  map_test.py
athena/dlp_model_evaluation/: call_ilqr.py  dlp_model_evaluation.py  script.sh
athena/dlp_model_evaluation/common/: type.py
athena/dlp_model_evaluation/metrics/: collision.py  comfort.py  drivable_area.py  metric_base.py  utils.py
athena/dlp_model_evaluation/notebook/: gyh.ipynb  gyh_drivable_area.ipynb
athena/jupyter/: occ_to_vector.ipynb
jupyter_notebook/: CMakeLists.txt  polyfit_pybind.ipynb  polyfit_pybind_ramp.ipynb  pybind_polyfit.cpp  pybind_polyfit.h  setup.py
jupyter_notebook/.ipynb_checkpoints/: polyfit_pybind-checkpoint.ipynb
new_xviz/: baseplot.ipynb  freespace.py  (+16 more)
njson/: CMakeLists.txt  njson_test.cpp  njson_test.h
polyfit/: CMakeLists.txt  polyfit.cpp  polyfit.h  polyfit_osqp.cpp  polyfit_osqp.h
polyfit/common/: utils.cpp  utils.h
polyfit/spline_new/: lane.hpp  polynomial.hpp  spline.hpp  spline_generator.hpp  spline_reference_smoother.hpp
(+89 files in other folders)
